STYLES: Add overflow-x hidden in order to avoid horizontal scroll bars since animations use translateX

--- a/src/App.scss
+++ b/src/App.scss
@@ -18,3 +18,7 @@
         color: var(--light-grey-color-2);
     }
 }
+
+section {
+    overflow-x: hidden;
+}
